force-app/main/default/objects/Demo_Config__c/Demo_Config__c.object-meta.xml
<CustomObject>
    <description>Maintains demo configuration that can be changed to alter the behaviour of OmniScripts, etc.</description>
    <label>Demo Config</label>
    <nameField>
        <label>Demo Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>