force-app/main/default/objects/Demo_Config__c/fields/Community_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Community_Permission_Set__c</fullName>
    <description>The Permission Set to assign to new users</description>
    <inlineHelpText>The Permission Set to assign to new users</inlineHelpText>
    <label>Community Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>