force-app/main/default/objects/Demo_Config__c/fields/Community_Profile__c.field-meta.xml
<CustomField>
    <fullName>Community_Profile__c</fullName>
    <description>The Community Profile to assign to new users</description>
    <inlineHelpText>The Community Profile to assign to new users</inlineHelpText>
    <label>Community Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>