force-app/main/default/objects/Demo_Config__c/fields/CPQ_API__c.field-meta.xml
<CustomField>
    <fullName>CPQ_API__c</fullName>
    <description>Configures the default API that should be used by OmniScripts.</description>
    <inlineHelpText>Configures the default API that should be used by OmniScripts.</inlineHelpText>
    <label>Default CPQ API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cpqv2</fullName>
                <default>true</default>
                <label>CPQv2</label>
            </value>
            <value>
                <fullName>dc</fullName>
                <label>Digital Commerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>