force-app/main/default/objects/Demo_Config__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables extra (debug) steps and messages during OmniScript execution.</description>
    <inlineHelpText>Enables extra (debug) steps and messages during OmniScript execution.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>