force-app/main/default/objects/Demo_Config__c/fields/Default_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Default_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default catalog to use with Digital Commerce APIs</description>
    <inlineHelpText>The default catalog to use with Digital Commerce APIs</inlineHelpText>
    <label>Default Catalog</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipLabel>Demo Configs</relationshipLabel>
    <relationshipName>Demo_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>