force-app/main/default/objects/Demo_Config__c/fields/Default_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default price list to use with CPQv2 APIs</description>
    <inlineHelpText>The default price list to use with CPQv2 APIs</inlineHelpText>
    <label>Default Price List</label>
    <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
    <relationshipLabel>Demo Configs</relationshipLabel>
    <relationshipName>Demo_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>