force-app/main/default/objects/Demo_Config__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>The default destination Email Address where notifications will be sent (i.e. account registration) during the demo.</description>
    <inlineHelpText>The default destination Email Address where notifications will be sent (i.e. account registration) during the demo.</inlineHelpText>
    <label>Default Notification Email</label>
    <type>Email</type>
</CustomField>