force-app/main/default/objects/Demo_Config__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <description>Sets the default name for orders generated by OmniScripts.</description>
    <inlineHelpText>Sets the default name for orders generated by OmniScripts.</inlineHelpText>
    <label>Default Order Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>