force-app/main/default/objects/Demo_Config__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The default password to use during new account creation. This can be overridden by the user during registration.</description>
    <inlineHelpText>The default password to use during new account creation. This can be overridden by the user during registration.</inlineHelpText>
    <label>Default Password</label>
    <length>128</length>
    <type>Text</type>
</CustomField>