force-app/main/default/objects/Demo_Config__c/recordTypes/Multiplay_Demo_Config.recordType-meta.xml
<RecordType>
    <fullName>Multiplay_Demo_Config</fullName>
    <active>true</active>
    <description>Demo configuration related to the Multiplay demo</description>
    <label>Multiplay Demo Config</label>
</RecordType>